--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ einops>=0.8.0
 torch>=2.4.1
 transformers>=4.45.2
 flash-attn>=2.6.3
+torch>=2.4.1
+transformers>=4.45.2
+flash-attn>=2.6.3
 gradio>=3.36.1
 omegaconf>=2.3.0
 pillow>=11.0.0
